--- a/assets/scss/templates/tooltips/unit.scss
+++ b/assets/scss/templates/tooltips/unit.scss
@@ -174,6 +174,16 @@
     top: 24px;
   }
 }
+.tooltip-unit-skill-desc-buffs {
+  float: right;
+  white-space: nowrap;
+  overflow: hidden;
+
+  max-width: 240px;
+  &.tooltip-unit-skill-desc-buffs-short {
+    max-width: 175px;
+  }
+}
 .tooltip-unit-skill-gauge {
   position: absolute;
   top: -2px;
